--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-😊
+<style>
+
+    #content {
+        width: 500px;
+        max-width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 40px;
+    }
+
+</style>
+
+<body>
+<div id="content">
+
+<h2>Bernard Mendez</h2>
+
+<span><b>Ipsos</b></span>
+<br/>
+<span>Senior Data Journalist (Sep 2022 to Present)</span>
+<ul>
+    <li>Analyze polling data for media partners including the New York Times, the Washington Post, ABC News, NPR, Reuters, USA Today and more</li>
+    <li>Automated the creation of data deliverables using Python</li>
+    <li>Co-author a weekly column on public opinion data with senior Ipsos pollsters</li>
+    <li>Host briefings on trends in public opinion for internal and external stakeholders</li>
+    <li><a href='https://www.ipsos.com/en-us/americas-global-reputation-takes-hit'>link</a>, 
+        <a href="https://www.ipsos.com/en-us/state-democracy-according-americans">link</a>, 
+        <a href="https://fivethirtyeight.com/features/nonresponse-bias-ipsos-poll-findings/">link</a>
+    </li>
+</ul>
+
+<span><b>dot.LA</b></span>
+<br/>
+<span>Editorial Intern (Summer 2021)</span>
+<ul>
+    <li>Broke news on the Los Angeles tech startup scene, including startup funding rounds of Sam Altman-backed AI companies</li>
+    <li>Covered issues affecting workers in Los Angeles, such as developments in COVID-19 workplace restrictions</li>
+</ul>
+
+<span><b>Daily Bruin</b></span>
+<br/>
+<span>News editor, Data Journalist (2019-2021)</span>
+<ul>
+    <li>Led the News section for UCLA’s award-winning student newspaper, including a staff of five assistant editors and dozens of reporters</li>
+    <li>Coordinated breaking news coverage during historic events, including the 2020 election, Black Lives Matter protests, and major wildfires</li>
+    <li>Used tools like D3.js and Git to create interactive, data-driven articles, such as a tracker of 2020 election results and an in-depth examination of the demographics of UCLA’s faculty</li>
+</ul>
+
+<span><b>Associated Press</b></span>
+<br/>
+<span>Election Stringer (2021)</span>
+<br/>
+<br/>
+
+<span><b>CalMatters</b></span>
+<br/>
+<span>Contributor (2020)</span>
+<br/>
+<br/>
+</div>
+</body>
